HardwareReport: move to new format for hiding plots

--- a/HardwareReport/index.html
+++ b/HardwareReport/index.html
@@ -56,31 +56,47 @@
 <h3 hidden>DroneCAN devices</h3>
 <p id="DroneCAN"></p>
 
-<h3 hidden>Position offsets</h3>
-<div id="POS_OFFSETS" style="width:800px;height:800px"></div>
+<div hidden>
+  <h3>Position offsets</h3>
+  <div id="POS_OFFSETS" style="width:800px;height:800px"></div>
+</div>
 
-<h3 hidden>Temperature</h3>
-<div id="Temperature" style="width:800px;height:400px"></div>
+<div hidden>
+  <h3>Temperature</h3>
+  <div id="Temperature" style="width:800px;height:400px"></div>
+</div>
 
-<h3 hidden>Board Voltage</h3>
-<div id="Board_Voltage" style="width:800px;height:400px"></div>
+<div hidden>
+  <h3>Board Voltage</h3>
+  <div id="Board_Voltage" style="width:800px;height:400px"></div>
+</div>
 
-<h3 hidden>CPU</h3>
-<h4 hidden>Load</h4>
-<div id="performance_load" style="width:800px;height:400px"></div>
+<h3 id="CPU" hidden>CPU</h3>
+<div hidden>
+  <h4>Load</h4>
+  <div id="performance_load" style="width:800px;height:400px"></div>
+</div>
 
-<h4 hidden>Free memory</h4>
-<div id="performance_mem" style="width:800px;height:400px"></div>
+<div hidden>
+  <h4>Free memory</h4>
+  <div id="performance_mem" style="width:800px;height:400px"></div>
+</div>
 
-<h4 hidden>Loop times</h4>
-<div id="performance_time" style="width:800px;height:400px"></div>
+<div hidden>
+  <h4>Loop times</h4>
+  <div id="performance_time" style="width:800px;height:400px"></div>
+</div>
 
-<h3 hidden>Stack</h3>
-<h4 hidden>Free memory</h4>
-<div id="stack_mem" style="width:800px;height:400px"></div>
+<h3 id="Stack" hidden>Stack</h3>
+<div hidden>
+  <h4>Free memory</h4>
+  <div id="stack_mem" style="width:800px;height:400px"></div>
+</div>
 
-<h4 hidden>Memory usage</h4>
-<div id="stack_pct" style="width:800px;height:400px"></div>
+<div hidden>
+  <h4>Memory usage</h4>
+  <div id="stack_pct" style="width:800px;height:400px"></div>
+</div>
 
 <h3 hidden>Download Parameters</h3>
 <div id="ParametersContent" hidden>
@@ -239,9 +255,11 @@
 <h3 hidden>Download Files</h3>
 <p id="FILES"></p>
 
-<h3 hidden>Log stats</h3>
-<p id="LOGSTATS"></p>
-<div id="log_stats" style="width:800px;height:800px"></div>
+<div hidden>
+  <h3>Log stats</h3>
+  <p id="LOGSTATS"></p>
+  <div id="log_stats" style="width:800px;height:800px"></div>
+</div>
 
 <script>
 
