HardwareReport: show parameter changes during log

--- a/HardwareReport/index.html
+++ b/HardwareReport/index.html
@@ -205,6 +205,8 @@
     <br>
     <input type="button" id="SaveMinimalParams" value="Save Minimal Parameters" onclick="save_minimal_parameters();" hidden>
   </p>
+  <h4>Parameters Changed During Logging</h4>
+  <p id="ParameterChanges"></p>
 </div>
 
 <h3 hidden>Download Waypoints</h3>
