HardwareReport: add plot of dropped log packets and free buffer space

--- a/HardwareReport/index.html
+++ b/HardwareReport/index.html
@@ -257,8 +257,19 @@
   <div id="stack_pct" style="width:800px;height:400px"></div>
 </div>
 
+<h3 id="log_stats_header" hidden>Log stats</h3>
 <div hidden>
-  <h3>Log stats</h3>
+  <h4>Dropped messages</h4>
+  <div id="log_dropped" style="width:800px;height:400px"></div>
+</div>
+
+<div hidden>
+  <h4>Free Buffer Space</h4>
+  <div id="log_buffer" style="width:800px;height:400px"></div>
+</div>
+
+<div hidden>
+  <h4>Log Composition</h4>
   <p id="LOGSTATS"></p>
   <div id="log_stats" style="width:800px;height:800px"></div>
 </div>
