HardwareReport: decode and show WDOG msg

--- a/HardwareReport/index.html
+++ b/HardwareReport/index.html
@@ -41,6 +41,9 @@
 <h3 hidden>Flight Controller</h3>
 <p id="FC"></p>
 
+<h3 hidden>Watchdog</h3>
+<p id="WDOG"></p>
+
 <h3 hidden>Inertial Sensors</h3>
 <p id="INS"></p>
 
