--- a/HardwareReport/index.html
+++ b/HardwareReport/index.html
@@ -44,6 +44,9 @@
 <h3 hidden>Watchdog</h3>
 <p id="WDOG"></p>
 
+<h3 hidden>IOMCU</h3>
+<p id="IOMCU"></p>
+
 <h3 hidden>Inertial Sensors</h3>
 <p id="INS"></p>
 
