--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@ Many of the tools have a "Open In" button, this allows a log that has been opene
     </td>
   </tr>
 
+  <tr>
+    <td>
+      <a href="./StreamStats" style="margin: 20px; display: inline-block;"><img src="images/StreamStats_Icon.png" style="width:200px"></a>
+    </td>
+    <td style="text-align:left; vertical-align:top; max-width:960px;">
+      <h2>Stream stats</h2>
+      Message rate analysis for tlogs and bin logs.
+    </td>
+  </tr>
 
   <tr>
     <td>
