Add new WIP landing page for less polished tools.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,15 @@ Many of the tools have a "Open In" button, this allows a log that has been opene
     </td>
   </tr>
 
-  
+  <tr>
+    <td>
+      <a href="./Dev" style="margin: 20px; display: inline-block;"><img src="images/under-construction-sign-icon.png" style="width:200px"></a>
+    </td>
+    <td style="text-align:left; vertical-align:top; max-width:960px;">
+      <h2>Work in progress tools</h2>
+      The tools that are a work in progress, they are likely to be a little rough.
+    </td>
+  </tr>
 
 </table>
 
