--- a/Dev/index.html
+++ b/Dev/index.html
@@ -23,6 +23,15 @@ The tools on this page are either developer focused, or a work in progress, they
 
 <table>
 
+  <tr>
+    <td>
+      <a href="../KinematicTool" style="margin: 20px; display: inline-block;"><img src="../images/KinematicTool_Icon.png" style="width:200px"></a>
+    </td>
+    <td style="text-align:left; vertical-align:top; max-width:960px;">
+      <h2>Kinematic Tool</h2>
+      A tool to help understanding of attitude control input shaping.
+    </td>
+  </tr>
 
 </table>
 
