--- a/Dev/index.html
+++ b/Dev/index.html
@@ -25,6 +25,16 @@ The tools on this page are either developer focused, or a work in progress, they
 
   <tr>
     <td>
+      <a href="../StreamStats" style="margin: 20px; display: inline-block;"><img src="../images/StreamStats_Icon.png" style="width:200px"></a>
+    </td>
+    <td style="text-align:left; vertical-align:top; max-width:960px;">
+      <h2>Stream stats</h2>
+      Message rate analysis for tlogs and bin logs.
+    </td>
+  </tr>
+
+  <tr>
+    <td>
       <a href="../KinematicTool" style="margin: 20px; display: inline-block;"><img src="../images/KinematicTool_Icon.png" style="width:200px"></a>
     </td>
     <td style="text-align:left; vertical-align:top; max-width:960px;">
