HardwareReport: Added GPS

--- a/HardwareReport/index.html
+++ b/HardwareReport/index.html
@@ -63,6 +63,9 @@
 <h3 hidden>Barometers</h3>
 <p id="BARO"></p>
 
+<h3 hidden>GPS</h3>
+<p id="GPS"></p>
+
 <h3 hidden>Airspeed Sensors</h3>
 <p id="ARSPD"></p>
 
