Dev: add log finder link and icon

--- a/Dev/index.html
+++ b/Dev/index.html
@@ -25,6 +25,16 @@ The tools on this page are either developer focused, or a work in progress, they
 
   <tr>
     <td>
+      <a href="../LogFinder" style="margin: 20px; display: inline-block;"><img src="../images/LogFinder_Icon.png" style="width:200px"></a>
+    </td>
+    <td style="text-align:left; vertical-align:top; max-width:960px;">
+      <h2>Log Finder</h2>
+      A tool load and sort directories of logs. Note that directory read is not supported by all browsers.
+    </td>
+  </tr>
+
+  <tr>
+    <td>
       <a href="../StreamStats" style="margin: 20px; display: inline-block;"><img src="../images/StreamStats_Icon.png" style="width:200px"></a>
     </td>
     <td style="text-align:left; vertical-align:top; max-width:960px;">
