HardwareReport: add warnings section and warning for crash dump

--- a/HardwareReport/index.html
+++ b/HardwareReport/index.html
@@ -40,6 +40,9 @@
 
 <input id="OpenIn" type="button" value="Open In" disabled>
 
+<h3 hidden>Warnings</h3>
+<p id="warnings"></p>
+
 <h3 hidden>Firmware</h3>
 <p id="VER"></p>
 
