LogFinder: add progress bar

--- a/LogFinder/index.html
+++ b/LogFinder/index.html
@@ -37,6 +37,9 @@
 <button id="get_dir" type="button" onclick="loading_call(get_dir_then_load)">Search directory</button>
 <button id="reload" type="button" onclick="loading_call(load_from_dir)">Reload</button>
 </P>
+<P>
+<progress id="load" style="width: 1200px; height: 30px;"></progress>
+</P>
 
 <div id="tables"></div>
 
