All: move Open In to use tippy tip and share code with LogFinder, hook load event for faster open in between WebTools

--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -114,7 +114,8 @@ These params can then be saved and loaded into the autopilot without the need fo
             <td style="width: 10px;"></td>
             <td>
                 <input id="fileItem" type="file" accept=".bin" onchange="readFile(this)"><br><br>
-                <div id="OpenIn"></div><br><br>
+                <input id="OpenIn" type="button" value="Open In" disabled>
+                <br><br>
                 <input type="button" id="calculate" value="Calculate" onclick="loading_call(re_calc)">
             </td>
             <td width="99%" style="text-align:right; vertical-align:top">
