--- a/MAGFit/index.html
+++ b/MAGFit/index.html
@@ -90,7 +90,7 @@ For best results use a flight log that covers as many orientations as possible. 
         </td>
         <td style="width: 300px;"></td>
         <td style="text-align:right; vertical-align:top">
-            <div id="OpenIn"></div><br><br><br>
+            <input id="OpenIn" type="button" value="Open In" disabled><br><br><br>
             <img id="TT" src="../images/question-circle.svg" width="30px" 
                 data-tippy-content='Load a .bin log file using the file button. "Open In" opens the log in one of the other WebTools. If Analysis time or Attitude source are changed the Calculate button should be used to re-calculate the MAGFit.',
                 data-tippy-maxWidth='750px'
