--- a/HardwareReport/index.html
+++ b/HardwareReport/index.html
@@ -13,6 +13,9 @@
 
 <script src='https://cdn.plot.ly/plotly-2.20.0.min.js'></script>
 
+<script src="https://unpkg.com/@popperjs/core@2"></script>
+<script src="https://unpkg.com/tippy.js@6"></script>
+
 </head>
 <table style="width:1200px"><tr><td>
   <a href="https://ardupilot.org"><img src="../images/ArduPilot.png"></a>
@@ -33,7 +36,7 @@
 <body onload="initial_load(); reset();">
 <input id="fileItem" type="file" accept=".param,.parm,.bin" onchange="load(this)">
 
-<div id="OpenIn"></div>
+<input id="OpenIn" type="button" value="Open In" disabled>
 
 <h3 hidden>Firmware</h3>
 <p id="VER"></p>
@@ -296,7 +299,7 @@
       return false
   }
 
-  setup_open_in("OpenIn", "fileItem", function (data) { loading_call(() => { reset(); load_log(data) }) })
+  setup_open_in("OpenIn", "fileItem", function (data) { loading_call(() => { reset(); load_log(data) }) }, "right")
 
   init_loading_overlay()
 
