--- a/LogFinder/index.html
+++ b/LogFinder/index.html
@@ -6,6 +6,7 @@
 <script type="text/javascript" src="LogFinder.js"></script>
 <script type="text/javascript" src="../Libraries/FileSaver.js"></script>
 <script type="text/javascript" src="../Libraries/LoadingOverlay.js"></script>
+<script type="text/javascript" src="../Libraries/OpenIn.js"></script>
 
 <link href="https://unpkg.com/tabulator-tables@6.2.0/dist/css/tabulator.min.css" rel="stylesheet">
 <script src="https://unpkg.com/luxon@3.4.4/build/global/luxon.min.js"></script>
