--- a/FilterTool/index.html
+++ b/FilterTool/index.html
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="../Libraries/ParameterMetadata.js"></script>
 <script type="text/javascript" src="../Libraries/Plotly_helpers.js"></script>
 
-<script src='https://cdn.plot.ly/plotly-2.20.0.min.js'></script>
+<script src='../Packages/plotly.js-2.31.0/dist/plotly.min.js'></script>
 </head>
 <table style="width:1200px"><tr><td>
     <a href="https://ardupilot.org"><img src="../images/ArduPilot.png"></a>
