--- a/HardwareReport/index.html
+++ b/HardwareReport/index.html
@@ -11,10 +11,10 @@
 <script type="text/javascript" src="../Libraries/LoadingOverlay.js"></script>
 <script type="text/javascript" src="../Libraries/Param_Helpers.js"></script>
 
-<script src='https://cdn.plot.ly/plotly-2.20.0.min.js'></script>
+<script src='../Packages/plotly.js-2.31.0/dist/plotly.min.js'></script>
 
-<script src="https://unpkg.com/@popperjs/core@2"></script>
-<script src="https://unpkg.com/tippy.js@6"></script>
+<script src="../Packages/popperjs-core-2.11.8/dist/umd/popper.min.js"></script>
+<script src="../Packages/tippy.js-6.3.7/dist/tippy-bundle.umd.min.js"></script>
 
 </head>
 <table style="width:1200px"><tr><td>
