--- a/LogFinder/index.html
+++ b/LogFinder/index.html
@@ -8,12 +8,12 @@
 <script type="text/javascript" src="../Libraries/LoadingOverlay.js"></script>
 <script type="text/javascript" src="../Libraries/OpenIn.js"></script>
 
-<link href="https://unpkg.com/tabulator-tables@6.2.0/dist/css/tabulator.min.css" rel="stylesheet">
-<script src="https://unpkg.com/luxon@3.4.4/build/global/luxon.min.js"></script>
-<script src="https://unpkg.com/tabulator-tables@6.2.0/dist/js/tabulator.min.js"></script>
+<link href="../Packages/tabulator-tables-6.2.0/dist/css/tabulator.min.css" rel="stylesheet">
+<script src="../Packages/luxon-3.4.4/build/global/luxon.min.js"></script>
+<script src="../Packages/tabulator-tables-6.2.0/dist/js/tabulator.min.js"></script>
 
-<script src="https://unpkg.com/@popperjs/core@2"></script>
-<script src="https://unpkg.com/tippy.js@6"></script>
+<script src="../Packages/popperjs-core-2.11.8/dist/umd/popper.min.js"></script>
+<script src="../Packages/tippy.js-6.3.7/dist/tippy-bundle.umd.min.js"></script>
 
 </head>
 <table style="width:1200px"><tr><td>
