--- a/MAGFit/index.html
+++ b/MAGFit/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="utf-8" />
 <title>ArduPilot MAGFit</title>
-<script src='https://cdn.plot.ly/plotly-2.20.0.min.js'></script>
+<script src='../Packages/plotly.js-2.31.0/dist/plotly.min.js'></script>
 
-<script src='https://cdn.jsdelivr.net/npm/ml-matrix@6.10.5/matrix.umd.min.js'></script>
+<script src='../Packages/ml-matrix-6.11.0/matrix.umd.js'></script>
 
-<script src="https://unpkg.com/@popperjs/core@2"></script>
-<script src="https://unpkg.com/tippy.js@6"></script>
+<script src="../Packages/popperjs-core-2.11.8/dist/umd/popper.min.js"></script>
+<script src="../Packages/tippy.js-6.3.7/dist/tippy-bundle.umd.min.js"></script>
 
 <script type="text/javascript" src="wmm.js"></script>
 <script type="text/javascript" src="quaternion.js"></script>
