--- a/PIDReview/index.html
+++ b/PIDReview/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <title>ArduPilot PID Review Tool</title>
-<script src='https://cdn.plot.ly/plotly-2.20.0.min.js'></script>
-<script src="https://unpkg.com/browser-cjs/require.min.js"></script>
+<script src='../Packages/plotly.js-2.31.0/dist/plotly.min.js'></script>
+<script src="../Packages/browser-cjs-1.0.3/require.min.js"></script>
 <script type="text/javascript" src="PIDReview.js"></script>
 <script type="text/javascript" src="../Libraries/Array_Math.js"></script>
 <script type="text/javascript" src="../Libraries/fft.js"></script>
@@ -12,8 +12,8 @@
 <script type="text/javascript" src="../Libraries/LoadingOverlay.js"></script>
 <script type="text/javascript" src="../Libraries/Plotly_helpers.js"></script>
 
-<script src="https://unpkg.com/@popperjs/core@2"></script>
-<script src="https://unpkg.com/tippy.js@6"></script>
+<script src="../Packages/popperjs-core-2.11.8/dist/umd/popper.min.js"></script>
+<script src="../Packages/tippy.js-6.3.7/dist/tippy-bundle.umd.min.js"></script>
 
 </head>
 <table style="width:1200px"><tr><td>
