--- a/HardwareReport/index.html
+++ b/HardwareReport/index.html
@@ -286,6 +286,11 @@
   <div id="log_stats" style="width:800px;height:800px"></div>
 </div>
 
+<div hidden>
+  <h3>Clock drift</h3>
+  <div id="clock_drift" style="width:800px;height:400px"></div>
+</div>
+
 <script>
 
   window.onerror = function(msg, url, linenumber) {
