all: add favicon

--- a/LogFinder/index.html
+++ b/LogFinder/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>ArduPilot Log Finder</title>
+<link rel="icon" href="../images/AP_favicon.png">
 <script type="text/javascript" src="LogFinder.js"></script>
 <script type="text/javascript" src="../Libraries/FileSaver.js"></script>
 <script type="text/javascript" src="../Libraries/LoadingOverlay.js"></script>
