--- a/MAGFit/index.html
+++ b/MAGFit/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>ArduPilot MAGFit</title>
+<link rel="icon" href="../images/AP_favicon.png">
 <script src='https://cdn.plot.ly/plotly-2.20.0.min.js'></script>
 
 <script src='https://cdn.jsdelivr.net/npm/ml-matrix@6.10.5/matrix.umd.min.js'></script>
