--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>ArduPilot Web Tools</title>
-
+<link rel="icon" href="images/AP_favicon.png">
 </head>
 <table style="width:1200px"><tr><td>
   <a href="https://ardupilot.org"><img src="images/ArduPilot.png"></a>
