--- a/KinematicTool/index.html
+++ b/KinematicTool/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>ArduPilot Kinematic Tool</title>
+<link rel="icon" href="../images/AP_favicon.png">
 <script type="text/javascript" src="KinematicTool.js"></script>
 <script type="text/javascript" src="../Libraries/FileSaver.js"></script>
 <script type="text/javascript" src="../Libraries/Array_Math.js"></script>
