--- a/PIDReview/index.html
+++ b/PIDReview/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>ArduPilot PID Review Tool</title>
+<link rel="icon" href="../images/AP_favicon.png">
 <script src='https://cdn.plot.ly/plotly-2.20.0.min.js'></script>
 <script src="https://unpkg.com/browser-cjs/require.min.js"></script>
 <script type="text/javascript" src="PIDReview.js"></script>
