--- a/StreamStats/index.html
+++ b/StreamStats/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>Stream Stats</title>
+<link rel="icon" href="../images/AP_favicon.png">
 <script type="text/javascript" src="StreamStats.js"></script>
 <script type="text/javascript" src="mavlink_msgs.js"></script>
 
